add ENV variable dagster_home to Dockerfile

--- a/Docker/Dockerfile
+++ b/Docker/Dockerfile
@@ -14,5 +14,7 @@ RUN apt install openjdk-11-jdk -y
 RUN pip install --upgrade pip
 RUN pip install -r requirements.txt
 
+ENV DAGSTER_HOME=/usr/src/dagster_home/
+
 RUN mkdir -p /usr/src/data
 VOLUME /usr/src/data
