--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -28,3 +28,14 @@ jobs:
         FILE_SYSTEM: ${{ env.FILE_SYSTEM }}
         EMAIL: ${{ secrets.EMAIL }}
         API_KEY: ${{ secrets.API_KEY }}
+    - name: Upload coverage reports to Codecov
+      uses: codecov/codecov-action@v3
+      with:
+        token: ${{ secrets.CODECOV_TOKEN }}
+        directory: .
+        env_vars: OS,PYTHON
+        fail_ci_if_error: true
+        files: coverage.xml
+        flags: unittests
+        name: codecov-umbrella
+        verbose: true
