--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,8 @@ dependencies = [
     "polars >= 0.19.11",
     "pyarrow >= 13.0.0",
     "requests >= 2.31.0",
+    "pycairo == 1.25.1",
+    "svgutils == 0.3.4",
 ]
 
 [project.optional-dependencies]
