--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,6 +30,7 @@ dependencies = [
     "requests >= 2.31.0",
     "pycairo == 1.25.1",
     "svgutils == 0.3.4",
+    "cairosvg == 2.7.1",
 ]
 
 [project.optional-dependencies]
