--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,6 @@ on:
   push:
     branches:
       - main
-permissions:
-  contents: write
 
 jobs:
   test:
@@ -49,6 +47,13 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
+      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
+      - uses: actions/cache@v4
+        with:
+          key: mkdocs-material-${{ env.cache_id }}
+          path: .cache
+          restore-keys: |
+            mkdocs-material-
       - run: pip install mkdocs-material mkdocstrings[python]
       - run: mkdocs build
       - run: mkdocs gh-deploy --force
