Feature ci doc (#72)
* permisssions

* try mkdoc doc

* revert back ci

* example workflow

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -42,20 +42,14 @@ jobs:
         name: codecov-umbrella
         verbose: true
 
-  docs:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - uses: actions/setup-python@v5
-        with:
-          python-version: 3.x
-      - run: echo "cache_id=$(date --utc '+%V')" >> $GITHUB_ENV 
-      - uses: actions/cache@v4
-        with:
-          key: mkdocs-material-${{ env.cache_id }}
-          path: .cache
-          restore-keys: |
-            mkdocs-material-
-      - run: pip install mkdocs-material mkdocstrings[python]
-      - run: mkdocs build
-      - run: mkdocs gh-deploy --force
+
+  # docs:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - uses: actions/setup-python@v5
+  #       with:
+  #         python-version: 3.x
+  #     - run: pip install mkdocs-material mkdocstrings[python]
+  #     - run: mkdocs build
+  #     - run: mkdocs gh-deploy --force
