--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -61,15 +61,15 @@ jobs:
 #       - "docs/**"
 #       - mkdocs.yml
 # jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v4
-#       - uses: actions/setup-python@v5
-#         with:
-#           python-version: 3.x
-#       - name: install mkdocs
-#         run: pip install mkdocs-material mkdocstrings[python]
-#       - name: deploy mkdocs
-#         run: mkdocs gh-deploy --force --clean --verboses  
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
+        with:
+          python-version: 3.x
+      - name: install mkdocs
+        run: pip install mkdocs-material mkdocstrings[python]
+      - name: deploy mkdocs
+        run: mkdocs gh-deploy --force --clean --verboses  
 
