--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,5 +71,5 @@ jobs:
       - name: install mkdocs
         run: pip install mkdocs-material mkdocstrings[python]
       - name: deploy mkdocs
-        run: mkdocs gh-deploy --force --clean --verboses  
+        run: mkdocs gh-deploy --force --clean --verbose 
 
