--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,9 +3,6 @@ on:
   push:
     branches:
       - main
-    paths:
-      - "docs/**"
-      - mkdocs.yml
 
 jobs:
   test:
@@ -43,27 +40,6 @@ jobs:
         name: codecov-umbrella
         verbose: true
 
-  # docs:
-  #   runs-on: ubuntu-latest
-  #   steps:
-  #     - uses: actions/checkout@v4
-  #     - uses: actions/setup-python@v5
-  #       with:
-  #         python-version: 3.x
-  #     - run: pip install mkdocs-material mkdocstrings[python]
-  #     - run: mkdocs build
-  #     - run: mkdocs gh-deploy --force
-
-
-# name: ci
-# on:
-#   push:
-#     branches:
-#       - main
-#     paths:
-#       - "docs/**"
-#       - mkdocs.yml
-# jobs:
   docs:
     runs-on: ubuntu-latest
     steps:
@@ -71,8 +47,6 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-      - name: install mkdocs
-        run: pip install mkdocs-material mkdocstrings[python]
-      - name: deploy mkdocs
-        run: mkdocs gh-deploy --force --clean --verbose 
-
+      - run: pip install mkdocs-material mkdocstrings[python]
+      - run: mkdocs build
+      - run: mkdocs gh-deploy --force
