--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
     "reportlab >= 4.1.0",
     "rlPyCairo >= 0.3.0",
     "cuallee >= 0.13.1",
+    "pandas >= 2.2.1",
     "duckdb >= 0.10.0",
     "polars >= 1.0.0",
     "pyarrow >= 15.0.0",
