--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -70,7 +70,7 @@ markdown_extensions:
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
 #   - pymdownx.keys
-#   - pymdownx.snippets
+  - pymdownx.snippets
   - pymdownx.tabbed:  # in-content tabs
       alternate_style: true
   - def_list
