Feature bacteriophage example (#98)
* enable doc snippets

* bacteriophage example backbone

* add md in_line_html for figure captions

* add first figure

* add style for captions

* screenshot to be used to illustrate phage example

* write pre-requisite

* add screenshots step 1

* step 1 warnings

* finish step 1

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -61,6 +61,7 @@ theme:
 markdown_extensions:
   - tables
   - admonition
+  - md_in_html
   - pymdownx.details  # coloured box
   # - codehilite
   # - pymdownx.highlight
@@ -70,7 +71,7 @@ markdown_extensions:
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
 #   - pymdownx.keys
-#   - pymdownx.snippets
+  - pymdownx.snippets
   - pymdownx.tabbed:  # in-content tabs
       alternate_style: true
   - def_list
