--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -71,7 +71,8 @@ markdown_extensions:
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
 #   - pymdownx.keys
-  - pymdownx.snippets
+  - pymdownx.snippets:
+      base_path: ["docs/snippets"]
   - pymdownx.tabbed:  # in-content tabs
       alternate_style: true
   - def_list
