--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "setuptools.build_meta"
 
 [project]
 name = "synphage"
-version = "0.2.6"
+version = "0.2.7"
 authors = [
   { name="Virginie Grosboillot", email="vestalisvirginis@gmail.com" },
 ]
@@ -18,17 +18,17 @@ classifiers = [
     "Operating System :: OS Independent",
 ]
 dependencies = [
-    "dagster >= 1.7.12",
-    "dagster-webserver >= 1.7.12",
-    "biopython >= 1.83",
-    "reportlab >= 4.1.0",
-    "rlPyCairo >= 0.3.0",
-    "cuallee >= 0.13.1",
-    "pandas >= 2.2.1",
-    "duckdb >= 1.0.0",
-    "polars >= 1.0.0",
-    "pyarrow >= 15.0.0",
-    "requests >= 2.31.0",
+    "dagster == 1.7.15",
+    "dagster-webserver == 1.7.15",
+    "biopython == 1.84",
+    "reportlab == 4.2.2",
+    "rlPyCairo == 0.3.0",
+    "cuallee == 0.13.1",
+    "pandas == 2.2.2",
+    "duckdb == 1.0.0",
+    "polars == 1.3.0",
+    "pyarrow == 17.0.0",
+    "requests == 2.32.3",
     "pycairo == 1.26.1",
     "svgutils == 0.3.4",
     "cairosvg == 2.7.1",
